--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.1",
-        "phpunit/phpunit": "^4.8|^5.0",
-        "alt-three/testbench": "^1.1"
+        "phpunit/phpunit": "^4.8|^5.0"
     },
     "autoload": {
         "psr-4": {
