--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "php": ">=5.5.9",
         "illuminate/contracts": "5.1.*|5.2.*",
         "illuminate/support": "5.1.*|5.2.*",
-        "symfony/yaml": "~3.0"
+        "symfony/yaml": "~2.7|~3.0"
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.1",
