--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
     }],
     "require": {
         "php": ">=5.5.9",
-        "illuminate/contracts": "5.1.*|5.2.*",
-        "illuminate/support": "5.1.*|5.2.*",
+        "illuminate/contracts": "5.1.* || 5.2.*",
+        "illuminate/support": "5.1.* || 5.2.*",
         "jamesmoss/toml": "^1.1",
-        "symfony/yaml": "~2.7|~3.0"
+        "symfony/yaml": "^2.7 || ^3.0"
     },
     "require-dev": {
         "graham-campbell/testbench": "^3.1",
-        "phpunit/phpunit": "^4.8|^5.0"
+        "phpunit/phpunit": "^4.8 || ^5.0"
     },
     "autoload": {
         "psr-4": {
