Support Laravel 5.3 and 5.4

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     }],
     "require": {
         "php": ">=5.5.9",
-        "illuminate/contracts": "5.1.*|5.2.*",
-        "illuminate/support": "5.1.*|5.2.*",
+        "illuminate/contracts": "5.1.*|5.2.*|5.3.*|5.4.*",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*",
         "jamesmoss/toml": "^1.1",
         "symfony/yaml": "~2.7|~3.0"
     },
