--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,51 @@
 language: php
 
-php:
-  - 5.5.9
-  - 5.5
-  - 5.6
-  - 7.0
-  - hhvm
+matrix:
+  include:
+    - php: 5.5.9
+      env: LARAVEL_VERSION=5.1.*
+    - php: 5.5.9
+      env: LARAVEL_VERSION=5.2.*
+    - php: 5.5
+      env: LARAVEL_VERSION=5.1.*
+    - php: 5.5
+      env: LARAVEL_VERSION=5.2.*
+    - php: 5.6
+      env: LARAVEL_VERSION=5.1.*
+    - php: 5.6
+      env: LARAVEL_VERSION=5.2.*
+    - php: 5.6
+      env: LARAVEL_VERSION=5.3.*
+    - php: 5.6
+      env: LARAVEL_VERSION=5.4.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.1.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.2.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.3.*
+    - php: 7.0
+      env: LARAVEL_VERSION=5.4.*
+    - php: 7.1
+      env: LARAVEL_VERSION=5.1.*
+    - php: 7.1
+      env: LARAVEL_VERSION=5.2.*
+    - php: 7.1
+      env: LARAVEL_VERSION=5.3.*
+    - php: 7.1
+      env: LARAVEL_VERSION=5.4.*
+    - php: hhvm
+      env: LARAVEL_VERSION=5.1.*
+      dist: trusty
+    - php: hhvm
+      env: LARAVEL_VERSION=5.2.*
+      dist: trusty
+    - php: hhvm
+      env: LARAVEL_VERSION=5.3.*
+      dist: trusty
+    - php: hhvm
+      env: LARAVEL_VERSION=5.4.*
+      dist: trusty
 
 sudo: false
 
