--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         },
         "laravel": {
             "providers": [
-                "BlueBayTravel\\Phrontmatter\\PhrontmatterServiceProvider",
+                "BlueBayTravel\\Phrontmatter\\PhrontmatterServiceProvider"
             ],
             "aliases": {
                 "Phrontmatter": "BlueBayTravel\\Phrontmatter\\Facades\\Phrontmatter"
